fix: properly add gap between related table accordions
in cases where multiple accordions where hidden, we
were not properly adding space due to a selector usage

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -998,7 +998,7 @@ html {
       box-shadow: none;
       border-radius: 0;
       border: 0;
-      &:not(.forced-hidden) + .chaise-accordion:not(.forced-hidden) {
+      &:not(.forced-hidden) ~ .chaise-accordion:not(.forced-hidden) {
         margin-top: $_space-between-accordions;
       }
 
